# nutrition_optimizer

./: .coveragerc  .env  .gitignore  Dockerfile  README.md  app.py  commands.txt  jest.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: my_commands.md
scripts/: append-js-extension.js  excel_to_json.py
src/: constraint.py  food_information.py  nutrition_optimizer.py  objective.py  optimize_nutrition.py  poc.py  singleton_logger.py  utilities.py
static/: main.js  nutrition_data.json  nutrition_info_controller.js  nutrition_info_view.js  nutrition_table_manager.js  script.js  styles.css
static/bk/: main.js  nutrition_data.json  nutrition_info_model.js
static/css/: style.css
static/js/: dom-utilities.js  main.js  nutrition-optimizer.js  script.js
static/ts/: dom-utilities.ts  main.ts  nutrition-optimizer.ts  script.ts
templates/: _base.html  _color_modes.html  _constraints.html  _food_information.html  _header.html  _objective.html  _objectives.html  _optimize_button.html  _results.html  index.html
tests/: conftest.py  test_constraint.py  test_nutrition_optimizer.py  test_objective.py  test_singleton_logger.py  test_utilities.py
tests/backend/: conftest.py  test_food_information.py  test_objective.py  test_singleton_logger.py  test_utilities.py
tests/frontend/: dom-utilities.test.ts  nutrition-optimizer.test.ts  script.test.ts
